rough format for the tasks html

--- a/src/pages/tasks/tasks.scss
+++ b/src/pages/tasks/tasks.scss
@@ -1,3 +1,12 @@
 page-tasks {
 
+    .bottom-row {
+        color: gray;
+        font-size: 12px;
+    }
+
+    .right-col {
+        text-align: right
+    }
+
 }
