--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -1,3 +1,13 @@
 page-calendar {
 
+    .label {
+        width: 20%;
+        border-right: 1px solid;
+    }
+
+    .event-space {
+        width: 80%;
+        // border-bottom: 1px solid;
+    }
+
 }
