changed title and adjusted size of event space

--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -1,5 +1,9 @@
 page-calendar {
 
+    .row {
+        min-height: 26px;
+    }
+
     .label {
         width: 20%;
         border-right: 1px solid;
