implmented adding events functionality

--- a/src/pages/events/events.scss
+++ b/src/pages/events/events.scss
@@ -1,3 +1,27 @@
 page-events {
 
+    .item-button {
+        padding-left: 0px;
+    }
+
+    .item-inner {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+
+    .bottom-row {
+        color: gray;
+        font-size: 12px;
+    }
+
+    .right-col {
+        text-align: right
+    }
+
+    #add-event {
+        width: 50%;
+        margin-left: 25%;
+        margin-right: 25%;
+    }
+
 }
