--- a/src/pages/preferences/preferences.scss
+++ b/src/pages/preferences/preferences.scss
@@ -1,3 +1,16 @@
 page-preferences {
 
+    .item-button {
+        padding-left: 0px;
+    }
+
+    .item-inner {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+
+    .right-col {
+        text-align: right
+    }
+
 }
