css for tasks is a little bit better

--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -10,7 +10,7 @@ page-calendar {
 
     .label {
         width: 20%;
-        border-right: 1px solid;
+        top: -15px;
     }
 
     .event-space {
