moved add task button and cleaned up code

--- a/src/pages/tasks/tasks.scss
+++ b/src/pages/tasks/tasks.scss
@@ -1,5 +1,9 @@
 page-tasks {
 
+    .nav-buttons {
+        font-size: 25px;
+    }
+
     .divider {
         padding-left: 16px;
     }
@@ -11,11 +15,6 @@ page-tasks {
     .top-row {
         padding-left: 11px;
     }
-
-    // .item-inner {
-    //     padding-left: 8px;
-    //     padding-right: 8px;
-    // }
 
     .bottom-row {
         padding-left: 11px;
