15 minute tasks look good now

--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -16,6 +16,11 @@ page-calendar {
         border-bottom-right-radius: 15px;
     }
 
+    .top-bottom-increment-scheduled {
+        border: 4px solid;
+        border-radius: 15px;
+    }
+
     .middle-increment-scheduled {
         border-left: 4px solid;
         border-right: 4px solid;
