created constants for some css

--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -1,29 +1,34 @@
 page-calendar {
 
+    :root {
+        --scheduled-border-thickness: 2px solid;
+        --scheduled-border-radius: 15px;
+    }
+
     .top-increment-scheduled {
-        border-top: 2px solid;
-        border-left: 2px solid;
-        border-right: 2px solid;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+        border-top: var(--scheduled-border-thickness);
+        border-left: var(--scheduled-border-thickness);
+        border-right: var(--scheduled-border-thickness);
+        border-top-left-radius: var(--scheduled-border-radius);
+        border-top-right-radius: var(--scheduled-border-radius);
     }
 
     .bottom-increment-scheduled {
-        border-bottom: 2px solid;
-        border-left: 2px solid;
-        border-right: 2px solid;
-        border-bottom-left-radius: 15px;
-        border-bottom-right-radius: 15px;
+        border-bottom: var(--scheduled-border-thickness);
+        border-left: var(--scheduled-border-thickness);
+        border-right: var(--scheduled-border-thickness);
+        border-bottom-left-radius: var(--scheduled-border-radius);
+        border-bottom-right-radius: var(--scheduled-border-radius);
     }
 
     .top-bottom-increment-scheduled {
-        border: 2px solid;
-        border-radius: 15px;
+        border: var(--scheduled-border-thickness);
+        border-radius: var(--scheduled-border-radius);
     }
 
     .middle-increment-scheduled {
-        border-left: 2px solid;
-        border-right: 2px solid;
+        border-left: var(--scheduled-border-thickness);
+        border-right: var(--scheduled-border-thickness);
     }
 
     .unscheduled {
