align button text to the left

--- a/src/pages/calendar/calendar.scss
+++ b/src/pages/calendar/calendar.scss
@@ -1,5 +1,9 @@
 page-calendar {
 
+    .button-inner {
+        justify-content: left;
+    }
+
     .top-increment-scheduled {
         border-top: 2px solid;
         border-left: 2px solid;
