--- a/src/pages/edit-event/edit-event.scss
+++ b/src/pages/edit-event/edit-event.scss
@@ -1,9 +1,9 @@
 page-edit-event {
 
     #update-button {
-        width: 50%;
-        margin-left: 25%;
-        margin-right: 25%;
+        // width: 50%;
+        // margin-left: 25%;
+        // margin-right: 25%;
     }
 
     .checkboxes-label {
